[project]
name = "packet-auditor"
version = "1.1.0"
description = "Bare-bones packet auditor: Simple • Practical • Reliable"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
authors = [
    {name = "Abhrankan Chakrabarti", email = "abhrankan@gmail.com"}
]
keywords = ["network", "packets", "scapy", "sniffer", "security", "cli"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Topic :: System :: Networking :: Monitoring",
    "Topic :: Security",
]
dependencies = ["scapy>=2.5.0"]

[project.urls]
Homepage = "https://github.com/foxhackerzdevs/packet-auditor"
Repository = "https://github.com/foxhackerzdevs/packet-auditor"
Issues = "https://github.com/foxhackerzdevs/packet-auditor/issues"

[project.scripts]
packet-audit = "packet_audit:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["packet_audit.py"]