[project]
name = "packet-auditor"
version = "1.1.2"
description = "Bare-bones packet auditor: Simple • Practical • Reliable"

readme = {file = "README.md", content-type = "text/markdown"}

requires-python = ">=3.7"

license = {text = "MIT"}

authors = [
    {name = "Abhrankan Chakrabarti", email = "abhrankan@gmail.com"}
]

keywords = [
    "network",
    "packet sniffer",
    "scapy",
    "network monitoring",
    "cli tool",
    "security",
    "packet analysis"
]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",

    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",

    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",

    "Topic :: Security",
    "Topic :: System :: Networking",
    "Topic :: System :: Networking :: Monitoring",
    "Topic :: Utilities"
]

dependencies = [
    "scapy>=2.5.0"
]

[project.urls]
Homepage = "https://github.com/foxhackerzdevs/packet-auditor"
Repository = "https://github.com/foxhackerzdevs/packet-auditor"
Issues = "https://github.com/foxhackerzdevs/packet-auditor/issues"

[project.scripts]
packet-audit = "packet_audit:main"

[tool.setuptools]
py-modules = ["packet_audit"]